samples/_failures_safe/1761160027_0fd315_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db9f29a2.c: In function ‘main’:
./samples/SAFE/__tmp_db9f29a2.c:136:9: error: expected declaration or statement at end of input
  136 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_db9f29a2.c:136:9: error: expected declaration or statement at end of input
